--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,22 +1,32 @@
 header 
     position: fixed
-    top: 0
-    right: 0
-    width: calc(100% - 300px)
-    height: 60px
-    padding: 10px 0 0 0
+    top: 3px
+    left: 3px
     display: flex 
+    width: calc( 100vw - 6px )
+    height: 60px
+    background: #ffffff
+    border-radius: 5px 5px 0 0
+    z-index: 100000
+    * 
+        font-family: 'Raleway', sans-serif
+    .title
+        width: 200px
+        height: 100%
+        text-align: center 
+        line-height: 60px
+        font-size: 20px
+        text-transform: capitalize
     ul 
         position: absolute
         right: 0
-        width: 40%
-        min-width: 350px
+        top: 0
+        width: auto
         height: 100%
-        display: flex
-        justify-content: space-around
+        display: flex 
         list-style: none
         li 
-            width: calc(100% / 3 - 10px)
+            width: 13vw
             min-width: 120px
             max-width: 170px
             height: 100%
